# 8_Instant_Dictionary_WebApp_API

./: .gitignore  main.py  pyproject.toml
JustPy examples/: main.py
webapp/: about.py  dictionary.py  home.py  layout.py  page.py
